# Email_open_check_service

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
email_open_service/: asgi.py  settings.py  urls.py  wsgi.py
tracker/: admin.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py
